--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "0.0.1",
   "description": "A boilerplate to chrome extension with webpack",
   "scripts": {
-    "build": "node utils/build.js",
-    "start": "node utils/webserver.js"
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.11.2",
-    "fs-extra": "^0.30.0",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "2.24.1",
-    "style-loader": "^0.13.0",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "^2.3.0",
-    "write-file-webpack-plugin": "3.4.2"
+    "clean-webpack-plugin": "0.1.17",
+    "copy-webpack-plugin": "4.2.0",
+    "css-loader": "0.28.7",
+    "file-loader": "1.1.6",
+    "fs-extra": "5.0.0",
+    "html-loader": "0.5.1",
+    "html-webpack-plugin": "2.30.1",
+    "style-loader": "0.19.1",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.9.7",
+    "webpack-merge": "^4.1.1",
+    "write-file-webpack-plugin": "4.2.0"
   }
 }
